--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
-DB_USER=upswing
-DB_PASS=sauce
+DB_USER=labber
+DB_PASS=labber
 DB_NAME=upswing
 # Uncomment and set to true for Heroku
 # DB_SSL=true if heroku
