--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ DB_HOST=localhost
 DB_USER=labber
 DB_PASS=labber
 DB_NAME=upswing
+API_KEY=FAGS590EYBXES5QC
 # Uncomment and set to true for Heroku
 # DB_SSL=true if heroku
 DB_PORT=5432;
