--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.7.1",
-    "react-dotenv": "^0.1.3"
+    "react-dotenv": "^0.1.3",
+    "request": "^2.88.2"
   },
   "react-dotenv": {
     "whitelist": [
