--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "db:reset": "node bin/resetdb.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.7.1",
+    "pg-native": "^3.0.0",
     "react-dotenv": "^0.1.3",
     "request": "^2.88.2"
   },
