--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.2",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -23,6 +25,7 @@
     "pg": "^8.7.1",
     "pg-native": "^3.0.0",
     "react-dotenv": "^0.1.3",
+    "react-router-dom": "^6.0.2",
     "request": "^2.88.2"
   },
   "react-dotenv": {
