--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ DB_NAME=upswing
 API_KEY=FAGS590EYBXES5QC
 # Uncomment and set to true for Heroku
 # DB_SSL=true if heroku
-DB_PORT=5432;
+DB_PORT=5432
