--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "db:reset": "node bin/resetdb.js"
+    "dev": "nodemon server.js",
+    "db:reset": "node bin/resetdb.js",
+    "client": "cd frontend && npm start",
+    "start": "concurrently \"npm run dev\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
