--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.0.2",
     "react-scripts": "^4.0.3",
     "validator": "^13.7.0",
     "web-vitals": "^1.1.2"
