--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mui/material": "^5.2.1",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "bcrypt-salt": "^1.1.9",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.1.3",
     "chalk": "^4.1.2",
     "concurrently": "^6.4.0",
     "cookie-parser": "^1.4.6",
