--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pg": "^8.7.1",
     "pg-native": "^3.0.0",
     "react-dotenv": "^0.1.3",
+    "react-query": "^3.33.5",
     "react-router-dom": "^6.0.2",
     "request": "^2.88.2"
   },
